# salvo-starter

./: .env  Cargo.toml
conf/emails/: layout.hbs  security_code.hbs  verification.hbs  welcome.hbs
conf/notifications/: welcome.hbs
migrations/2023-03-09-034533_init_all/: down.sql  up.sql
migrations/2023-03-09-075043_add_access_tokens/: down.sql  up.sql
migrations/2023-03-09-075504_add_security_codes/: down.sql  up.sql
migrations/2023-03-09-090924_add_notifications/: down.sql  up.sql
migrations/2023-03-09-092621_alter_user_add_in_kernel/: up.sql
src/: context.rs  data.rs  db.rs  email.rs  error.rs  helpers.rs  macros.rs  main.rs  models.rs  routers.rs  schema.rs  shared.rs  things.rs  utils.rs
src/db/: delete.rs  pagination.rs  permit_filter.rs  url_filter.rs
src/helpers/: handlebars.rs
src/models/: base.rs
src/routers/: account.rs  auth.rs  home.rs  user.rs
src/routers/account/: access_token.rs  notification.rs
src/things/: notification.rs  user.rs
src/utils/: fs.rs  password.rs  validator.rs
