[package]
name = "back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "serde_json", "chrono", "numeric"] }
diesel_migrations = "2.0.0"
dotenv = "0.15.0"
salvo = { version = "0.37.7", features = ["jwt-auth", "proxy", "serve-static", "sse", "size-limiter"] }
tokio = { version = "1.21.1", features = ["macros", "parking_lot", "process"] }
once_cell = "1.15.0"
serde = { version = "1.0.118", features = ["derive"] }
serde-aux = "4.0.0"
serde_json = { version = "1.0.64" }
chrono = { version = "0.4.19", features = ["serde"] }
jsonwebtoken = "8.0.1"
strum = "0.24.0"
strum_macros = "0.24.0"
bitflags = "1.3.2"
async-trait = "0.1.48"
thiserror = "1.0.26"
tracing = { version = "0.1.36", features = ["release_max_level_debug", "max_level_debug"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "json"] }
url = "2.3.1"
cookie = "0.16.0"
uuid = { version = "1.1.2", features = ["v4"] }
md5 = "0.7.0"
mime = "0.3.16"
mime_guess = "2.0.4"
handlebars = "4.3.4"
bigdecimal = { version = "0.3.0", features = ["serde"] }
regex = "1.6.0"
path-slash = "0.2.1"
textnonce = "1.0.0"
zip = "0.6.2"
bcrypt = "0.13.0"
rand = "0.8.3"
lettre = "0.10"